# template-python

./: .readthedocs.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  README.md  cookiecutter.json  environment.yml  setup.cfg
.github/workflows/: docs.yml  test.yml
docs/: conf.py  index.rst
{{cookiecutter.repo_name}}/: .readthedocs.yaml  README.md  environment.yml  setup.cfg
{{cookiecutter.repo_name}}/.github/workflows/: docs.yml
{{cookiecutter.repo_name}}/docs/: Makefile  conf.py  index.rst
{{cookiecutter.repo_name}}/src/{{cookiecutter.package_slug}}/: cli.py
